<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/home3"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_Length"
            android:icon="@mipmap/length"
            android:title="@string/menu_length" />
        <item
            android:id="@+id/nav_Temperature"
            android:icon="@mipmap/thermom2"
            android:title="@string/menu_temperature" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/settings"
            android:title="@string/menu_settings" />
    </group>

</menu>
