<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.convertor.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_Length"
        android:name="com.example.convertor.ui.Length.LengthFragment"
        android:label="@string/menu_length"
        tools:layout="@layout/fragment_length" />

    <fragment
        android:id="@+id/nav_Temperature"
        android:name="com.example.convertor.ui.Temperature.TemperatureFragment"
        android:label="@string/menu_temperature"
        tools:layout="@layout/fragment_temperature" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.convertor.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>